[gd_scene load_steps=29 format=2]

[ext_resource path="res://addons/godot-openxr/scenes/first_person_controller_vr.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/godot-xr-tools/functions/function_pointer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Materials/alienhandmaterial.tres" type="Material" id=3]
[ext_resource path="res://addons/godot-xr-tools/player/poke/poke.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/godot-xr-tools/hands/scenes/highpoly/right_physics_hand.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/godot-xr-tools/hands/scenes/highpoly/left_physics_hand.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/ToolSelector2DScene.tscn" type="PackedScene" id=7]
[ext_resource path="res://Effects/JetpackFlames.tscn" type="PackedScene" id=9]
[ext_resource path="res://addons/godot-xr-tools/misc/vr_common_shader_cache.tscn" type="PackedScene" id=10]
[ext_resource path="res://Logic/Multitool.tscn" type="PackedScene" id=11]
[ext_resource path="res://Logic/Player/VRPlayer.gd" type="Script" id=12]
[ext_resource path="res://Logic/PlayerRayCast.tscn" type="PackedScene" id=14]
[ext_resource path="res://UI/UI.tscn" type="PackedScene" id=15]
[ext_resource path="res://addons/godot-xr-tools/objects/viewport_2d_in_3d.tscn" type="PackedScene" id=16]
[ext_resource path="res://addons/surreal6-player-cage/player-cage.tscn" type="PackedScene" id=17]

[sub_resource type="AnimationNodeAnimation" id=2]
animation = "Grip"

[sub_resource type="AnimationNodeAnimation" id=3]
animation = "Grip"

[sub_resource type="AnimationNodeBlend2" id=4]
filter_enabled = true
filters = [ "Armature/Skeleton:Little_Distal_L", "Armature/Skeleton:Little_Intermediate_L", "Armature/Skeleton:Little_Proximal_L", "Armature/Skeleton:Middle_Distal_L", "Armature/Skeleton:Middle_Intermediate_L", "Armature/Skeleton:Middle_Proximal_L", "Armature/Skeleton:Ring_Distal_L", "Armature/Skeleton:Ring_Intermediate_L", "Armature/Skeleton:Ring_Proximal_L", "Armature/Skeleton:Thumb_Distal_L", "Armature/Skeleton:Thumb_Proximal_L" ]

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "Grip 5"

[sub_resource type="AnimationNodeBlend2" id=6]
filter_enabled = true
filters = [ "Armature/Skeleton:Index_Distal_L", "Armature/Skeleton:Index_Intermediate_L", "Armature/Skeleton:Index_Proximal_L" ]

[sub_resource type="AnimationNodeBlendTree" id=7]
graph_offset = Vector2( -798.981, 58.67 )
nodes/ClosedHand1/node = SubResource( 2 )
nodes/ClosedHand1/position = Vector2( -600, 300 )
nodes/ClosedHand2/node = SubResource( 3 )
nodes/ClosedHand2/position = Vector2( -360, 300 )
nodes/Grip/node = SubResource( 4 )
nodes/Grip/position = Vector2( 0, 20 )
nodes/OpenHand/node = SubResource( 5 )
nodes/OpenHand/position = Vector2( -600, 100 )
nodes/Trigger/node = SubResource( 6 )
nodes/Trigger/position = Vector2( -360, 20 )
node_connections = [ "Trigger", 0, "OpenHand", "Trigger", 1, "ClosedHand1", "Grip", 0, "Trigger", "Grip", 1, "ClosedHand2", "output", 0, "Grip" ]

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "Grip"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "Grip"

[sub_resource type="AnimationNodeBlend2" id=10]
filter_enabled = true
filters = [ "Armature/Skeleton:Little_Distal_R", "Armature/Skeleton:Little_Intermediate_R", "Armature/Skeleton:Little_Proximal_R", "Armature/Skeleton:Middle_Distal_R", "Armature/Skeleton:Middle_Intermediate_R", "Armature/Skeleton:Middle_Proximal_R", "Armature/Skeleton:Ring_Distal_R", "Armature/Skeleton:Ring_Intermediate_R", "Armature/Skeleton:Ring_Proximal_R", "Armature/Skeleton:Thumb_Distal_R", "Armature/Skeleton:Thumb_Proximal_R" ]

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "Grip 5"

[sub_resource type="AnimationNodeBlend2" id=12]
filter_enabled = true
filters = [ "Armature/Skeleton:Index_Distal_R", "Armature/Skeleton:Index_Intermediate_R", "Armature/Skeleton:Index_Proximal_R" ]

[sub_resource type="AnimationNodeBlendTree" id=13]
graph_offset = Vector2( -753.664, -85.6991 )
nodes/ClosedHand1/node = SubResource( 8 )
nodes/ClosedHand1/position = Vector2( -600, 300 )
nodes/ClosedHand2/node = SubResource( 9 )
nodes/ClosedHand2/position = Vector2( -360, 300 )
nodes/Grip/node = SubResource( 10 )
nodes/Grip/position = Vector2( 0, 40 )
nodes/OpenHand/node = SubResource( 11 )
nodes/OpenHand/position = Vector2( -600, 100 )
nodes/Trigger/node = SubResource( 12 )
nodes/Trigger/position = Vector2( -360, 40 )
node_connections = [ "Trigger", 0, "OpenHand", "Trigger", 1, "ClosedHand1", "Grip", 0, "Trigger", "Grip", 1, "ClosedHand2", "output", 0, "Grip" ]

[sub_resource type="SphereShape" id=1]
radius = 0.585416

[node name="Player" instance=ExtResource( 1 )]
script = ExtResource( 12 )
multitoolcontrollerselection = 1
jetpack_fuel = 1.0
unlocked_jetpack = false
gravity_multiplier = 3.0
left_handed = false

[node name="ARVRCamera" parent="." index="1"]
far = 1000.0

[node name="VRCommonShaderCache" parent="ARVRCamera" index="0" instance=ExtResource( 10 )]

[node name="Flashlight" type="SpotLight" parent="ARVRCamera" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00718498, -0.138919 )
light_color = Color( 0.996078, 1, 0.709804, 1 )
light_energy = 1.5
spot_range = 11.0478
spot_angle = 37.9648
spot_angle_attenuation = 0.297302

[node name="UI_Viewport2Dto3D" parent="ARVRCamera" index="2" instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3 )
viewport_size = Vector2( 1980, 1020 )
unshaded = true
scene = ExtResource( 15 )
update_mode = 2
collision_layer = 524288

[node name="LeftMultiToolRemoteTransform" type="RemoteTransform" parent="LeftHandController" index="0"]

[node name="FunctionPointer" parent="LeftHandController" index="1" instance=ExtResource( 2 )]
laser_length = 1
collision_mask = 524288
collide_with_areas = true

[node name="LeftPhysicsHand" parent="LeftHandController" index="2" instance=ExtResource( 6 )]
hand_material_override = ExtResource( 3 )

[node name="mesh_Hand_Nails_L" parent="LeftHandController/LeftPhysicsHand/Hand_Nails_L/Armature/Skeleton" index="0"]
material_override = ExtResource( 3 )

[node name="BoneRoot" parent="LeftHandController/LeftPhysicsHand/Hand_Nails_L/Armature/Skeleton" index="1"]
transform = Transform( 1, -1.83077e-05, 1.52659e-08, 1.52668e-08, 0.00166774, 0.999999, -1.83077e-05, -0.999999, 0.00166774, 3.86425e-08, -1.86975e-05, 0.0271756 )

[node name="BoneThumbMetacarpal" parent="LeftHandController/LeftPhysicsHand/Hand_Nails_L/Armature/Skeleton" index="2"]
transform = Transform( 0.998519, 0.0514604, -0.017651, -0.017651, 0.613335, 0.789626, 0.0514604, -0.788145, 0.613335, 0.00999954, 0.0200266, 3.5936e-05 )

[node name="BoneThumbProximal" parent="LeftHandController/LeftPhysicsHand/Hand_Nails_L/Armature/Skeleton" index="3"]
transform = Transform( 0.921479, 0.383958, -0.0587628, -0.124052, 0.434264, 0.892202, 0.368087, -0.814856, 0.447796, 0.012311, 0.0475754, -0.0353647 )

[node name="BoneThumbDistal" parent="LeftHandController/LeftPhysicsHand/Hand_Nails_L/Armature/Skeleton" index="4"]
transform = Transform( 0.930159, 0.366844, 0.0151708, -0.154037, 0.352396, 0.923087, 0.333283, -0.860954, 0.384292, 0.028494, 0.0658787, -0.0697092 )

[node name="BoneIndexMetacarpal" parent="LeftHandController/LeftPhysicsHand/Hand_Nails_L/Armature/Skeleton" index="5"]
transform = Transform( 0.999165, 0.0336562, -0.0231681, 0.0231985, -0.000511129, 0.999731, 0.0336353, -0.999433, -0.00129147, -0.0100005, 0.0224317, 3.59286e-05 )

[node name="BoneIndexProximal" parent="LeftHandController/LeftPhysicsHand/Hand_Nails_L/Armature/Skeleton" index="6"]
transform = Transform( 0.997821, 0.0419384, -0.0509326, 0.041317, 0.204661, 0.97796, 0.0514381, -0.977934, 0.202483, -0.00729559, 0.0223907, -0.0802861 )

[node name="BoneIndexMiddle" parent="LeftHandController/LeftPhysicsHand/Hand_Nails_L/Armature/Skeleton" index="7"]
transform = Transform( 0.759851, 0.644453, -0.0854741, -0.040588, 0.178251, 0.983147, 0.648829, -0.743577, 0.161601, -0.00569706, 0.0301916, -0.117561 )

[node name="BoneIndexDistal" parent="LeftHandController/LeftPhysicsHand/Hand_Nails_L/Armature/Skeleton" index="8"]
transform = Transform( 0.356468, 0.927111, -0.115741, -0.109286, 0.164404, 0.98032, 0.927894, -0.336804, 0.159925, 0.0145038, 0.035779, -0.140869 )

[node name="Poke" parent="LeftHandController/LeftPhysicsHand/Hand_Nails_L/Armature/Skeleton/BoneIndexDistal" index="0" instance=ExtResource( 4 )]
teleport_distance = 0.01

[node name="BoneMiddleMetacarpal" parent="LeftHandController/LeftPhysicsHand/Hand_Nails_L/Armature/Skeleton" index="9"]
transform = Transform( 0.999918, -0.0127165, -0.00125617, 0.000365489, -0.0698022, 0.997561, -0.0127732, -0.997479, -0.0697919, -0.0100005, 0.00355416, 3.59286e-05 )

[node name="BoneMiddleProximal" parent="LeftHandController/LeftPhysicsHand/Hand_Nails_L/Armature/Skeleton" index="10"]
transform = Transform( 0.971345, 0.237654, -0.00293004, 0.0207339, -0.0724503, 0.997157, 0.236766, -0.968644, -0.0753018, -0.0110237, -0.00206236, -0.0802245 )

[node name="BoneMiddleMiddle" parent="LeftHandController/LeftPhysicsHand/Hand_Nails_L/Armature/Skeleton" index="11"]
transform = Transform( 0.764922, 0.643161, -0.0351718, 0.0290327, 0.0201225, 0.999376, 0.643468, -0.765466, -0.00328061, -0.000328453, -0.00532286, -0.123817 )

[node name="BoneMiddleDistal" parent="LeftHandController/LeftPhysicsHand/Hand_Nails_L/Armature/Skeleton" index="12"]
transform = Transform( 0.297115, 0.95453, -0.0243818, 0.0374454, 0.0138673, 0.999202, 0.954107, -0.297791, -0.0316226, 0.0205207, -0.00467056, -0.148631 )

[node name="BoneRingMetacarpal" parent="LeftHandController/LeftPhysicsHand/Hand_Nails_L/Armature/Skeleton" index="13"]
transform = Transform( 0.998609, 0.047074, 0.0237409, -0.0169882, -0.138981, 0.990149, 0.0499098, -0.989175, -0.137988, -0.0100005, -0.0130734, 3.59304e-05 )

[node name="BoneRingProximal" parent="LeftHandController/LeftPhysicsHand/Hand_Nails_L/Armature/Skeleton" index="14"]
transform = Transform( 0.982964, 0.181854, 0.0266582, 0.0109494, -0.202722, 0.979175, 0.183471, -0.962202, -0.20126, -0.00651962, -0.0233502, -0.0731075 )

[node name="BoneRingMiddle" parent="LeftHandController/LeftPhysicsHand/Hand_Nails_L/Armature/Skeleton" index="15"]
transform = Transform( 0.772579, 0.634603, 0.0200164, 0.0794845, -0.127948, 0.988591, 0.629924, -0.762173, -0.149291, 0.000778396, -0.0314857, -0.111722 )

[node name="BoneRingDistal" parent="LeftHandController/LeftPhysicsHand/Hand_Nails_L/Armature/Skeleton" index="16"]
transform = Transform( 0.381388, 0.924068, 0.0253391, 0.114105, -0.0742599, 0.99069, 0.917346, -0.374945, -0.133762, 0.0184188, -0.0350424, -0.132908 )

[node name="BonePinkyMetacarpal" parent="LeftHandController/LeftPhysicsHand/Hand_Nails_L/Armature/Skeleton" index="17"]
transform = Transform( 0.998969, 0.0165318, 0.0422887, -0.0385953, -0.181426, 0.982647, 0.0239172, -0.983265, -0.180601, -4.57587e-07, -0.0299734, 3.59416e-05 )

[node name="BonePinkyProximal" parent="LeftHandController/LeftPhysicsHand/Hand_Nails_L/Armature/Skeleton" index="18"]
transform = Transform( 0.969212, 0.239304, 0.0579745, 0.0185536, -0.305761, 0.951927, 0.245527, -0.921544, -0.300787, 0.00108587, -0.0418952, -0.0645756 )

[node name="BonePinkyMiddle" parent="LeftHandController/LeftPhysicsHand/Hand_Nails_L/Armature/Skeleton" index="19"]
transform = Transform( 0.699331, 0.713816, 0.0374602, 0.103947, -0.153407, 0.982681, 0.7072, -0.683325, -0.181481, 0.00901248, -0.0520231, -0.0951004 )

[node name="BonePinkyDistal" parent="LeftHandController/LeftPhysicsHand/Hand_Nails_L/Armature/Skeleton" index="20"]
transform = Transform( 0.340891, 0.939845, 0.0220291, 0.162162, -0.081867, 0.983362, 0.926011, -0.331647, -0.180315, 0.0218786, -0.0547881, -0.107417 )

[node name="AnimationTree" parent="LeftHandController/LeftPhysicsHand" index="1"]
tree_root = SubResource( 7 )

[node name="RightHandController" parent="." index="3"]
visible = true

[node name="RightMultiToolRemoteTransform" type="RemoteTransform" parent="RightHandController" index="0"]

[node name="RightPhysicsHand" parent="RightHandController" index="1" instance=ExtResource( 5 )]

[node name="BoneRoot" parent="RightHandController/RightPhysicsHand/Hand_Nails_R/Armature/Skeleton" index="1"]
transform = Transform( 1, 1.83077e-05, -1.52659e-08, -1.52668e-08, 0.00166774, 0.999999, 1.83077e-05, -0.999999, 0.00166774, -3.86425e-08, -1.86975e-05, 0.0271756 )

[node name="BoneThumbMetacarpal" parent="RightHandController/RightPhysicsHand/Hand_Nails_R/Armature/Skeleton" index="2"]
transform = Transform( 0.998519, -0.0514604, 0.017651, 0.017651, 0.613335, 0.789626, -0.0514604, -0.788145, 0.613335, -0.00999954, 0.0200266, 3.5936e-05 )

[node name="BoneThumbProximal" parent="RightHandController/RightPhysicsHand/Hand_Nails_R/Armature/Skeleton" index="3"]
transform = Transform( 0.921479, -0.383958, 0.0587628, 0.124052, 0.434264, 0.892202, -0.368087, -0.814856, 0.447796, -0.012311, 0.0475754, -0.0353647 )

[node name="BoneThumbDistal" parent="RightHandController/RightPhysicsHand/Hand_Nails_R/Armature/Skeleton" index="4"]
transform = Transform( 0.930159, -0.366844, -0.0151708, 0.154037, 0.352396, 0.923087, -0.333283, -0.860954, 0.384292, -0.028494, 0.0658787, -0.0697092 )

[node name="BoneIndexMetacarpal" parent="RightHandController/RightPhysicsHand/Hand_Nails_R/Armature/Skeleton" index="5"]
transform = Transform( 0.999165, -0.0336562, 0.0231681, -0.0231985, -0.000511129, 0.999731, -0.0336353, -0.999433, -0.00129147, 0.0100005, 0.0224317, 3.59286e-05 )

[node name="BoneIndexProximal" parent="RightHandController/RightPhysicsHand/Hand_Nails_R/Armature/Skeleton" index="6"]
transform = Transform( 0.997821, -0.0419384, 0.0509327, -0.041317, 0.204661, 0.97796, -0.0514382, -0.977934, 0.202483, 0.00729559, 0.0223907, -0.0802861 )

[node name="BoneIndexMiddle" parent="RightHandController/RightPhysicsHand/Hand_Nails_R/Armature/Skeleton" index="7"]
transform = Transform( 0.759851, -0.644453, 0.0854741, 0.040588, 0.178251, 0.983147, -0.648829, -0.743577, 0.161601, 0.00569705, 0.0301916, -0.117561 )

[node name="BoneIndexDistal" parent="RightHandController/RightPhysicsHand/Hand_Nails_R/Armature/Skeleton" index="8"]
transform = Transform( 0.356468, -0.927111, 0.115741, 0.109286, 0.164404, 0.98032, -0.927894, -0.336803, 0.159925, -0.0145038, 0.035779, -0.140869 )

[node name="Poke" parent="RightHandController/RightPhysicsHand/Hand_Nails_R/Armature/Skeleton/BoneIndexDistal" index="0" instance=ExtResource( 4 )]
visible = false
enabled = false
teleport_distance = 0.01

[node name="BoneMiddleMetacarpal" parent="RightHandController/RightPhysicsHand/Hand_Nails_R/Armature/Skeleton" index="9"]
transform = Transform( 0.999918, 0.0127165, 0.00125617, -0.000365489, -0.0698022, 0.997561, 0.0127732, -0.997479, -0.0697919, 0.0100005, 0.00355416, 3.59286e-05 )

[node name="BoneMiddleProximal" parent="RightHandController/RightPhysicsHand/Hand_Nails_R/Armature/Skeleton" index="10"]
transform = Transform( 0.971345, -0.237654, 0.00293004, -0.0207339, -0.0724503, 0.997157, -0.236766, -0.968644, -0.0753018, 0.0110237, -0.00206236, -0.0802245 )

[node name="BoneMiddleMiddle" parent="RightHandController/RightPhysicsHand/Hand_Nails_R/Armature/Skeleton" index="11"]
transform = Transform( 0.764922, -0.643161, 0.0351718, -0.0290327, 0.0201225, 0.999376, -0.643468, -0.765465, -0.00328062, 0.000328453, -0.00532286, -0.123817 )

[node name="BoneMiddleDistal" parent="RightHandController/RightPhysicsHand/Hand_Nails_R/Armature/Skeleton" index="12"]
transform = Transform( 0.297115, -0.95453, 0.0243818, -0.0374454, 0.0138673, 0.999202, -0.954107, -0.297791, -0.0316226, -0.0205207, -0.00467056, -0.148631 )

[node name="BoneRingMetacarpal" parent="RightHandController/RightPhysicsHand/Hand_Nails_R/Armature/Skeleton" index="13"]
transform = Transform( 0.998609, -0.047074, -0.0237409, 0.0169882, -0.138981, 0.990149, -0.0499098, -0.989175, -0.137988, 0.0100005, -0.0130734, 3.59304e-05 )

[node name="BoneRingProximal" parent="RightHandController/RightPhysicsHand/Hand_Nails_R/Armature/Skeleton" index="14"]
transform = Transform( 0.982964, -0.181854, -0.0266582, -0.0109494, -0.202722, 0.979175, -0.183471, -0.962202, -0.20126, 0.00651962, -0.0233502, -0.0731075 )

[node name="BoneRingMiddle" parent="RightHandController/RightPhysicsHand/Hand_Nails_R/Armature/Skeleton" index="15"]
transform = Transform( 0.772579, -0.634603, -0.0200164, -0.0794845, -0.127948, 0.988591, -0.629924, -0.762173, -0.149291, -0.000778398, -0.0314857, -0.111722 )

[node name="BoneRingDistal" parent="RightHandController/RightPhysicsHand/Hand_Nails_R/Armature/Skeleton" index="16"]
transform = Transform( 0.381388, -0.924068, -0.025339, -0.114105, -0.0742599, 0.99069, -0.917346, -0.374945, -0.133762, -0.0184188, -0.0350424, -0.132908 )

[node name="BonePinkyMetacarpal" parent="RightHandController/RightPhysicsHand/Hand_Nails_R/Armature/Skeleton" index="17"]
transform = Transform( 0.998969, -0.0165318, -0.0422887, 0.0385953, -0.181426, 0.982647, -0.0239172, -0.983265, -0.180601, 4.57587e-07, -0.0299734, 3.59416e-05 )

[node name="BonePinkyProximal" parent="RightHandController/RightPhysicsHand/Hand_Nails_R/Armature/Skeleton" index="18"]
transform = Transform( 0.969212, -0.239304, -0.0579745, -0.0185536, -0.305761, 0.951927, -0.245527, -0.921544, -0.300787, -0.00108587, -0.0418952, -0.0645756 )

[node name="BonePinkyMiddle" parent="RightHandController/RightPhysicsHand/Hand_Nails_R/Armature/Skeleton" index="19"]
transform = Transform( 0.699331, -0.713816, -0.0374602, -0.103947, -0.153407, 0.982681, -0.7072, -0.683325, -0.181481, -0.00901248, -0.0520231, -0.0951004 )

[node name="BonePinkyDistal" parent="RightHandController/RightPhysicsHand/Hand_Nails_R/Armature/Skeleton" index="20"]
transform = Transform( 0.340891, -0.939845, -0.0220291, -0.162162, -0.081867, 0.983362, -0.926011, -0.331647, -0.180315, -0.0218786, -0.0547881, -0.107417 )

[node name="AnimationTree" parent="RightHandController/RightPhysicsHand" index="1"]
tree_root = SubResource( 13 )

[node name="Player-cage" parent="." index="4" instance=ExtResource( 17 )]

[node name="JetpackLight" type="SpotLight" parent="." index="5"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.596073, -2.60552e-08 )
visible = false
light_color = Color( 1, 0.909804, 0.435294, 1 )
light_energy = 0.5
spot_range = 20.0
spot_attenuation = 1.86607
spot_angle = 40.9585
spot_angle_attenuation = 2.46229

[node name="JetpackFlames" parent="." index="6" instance=ExtResource( 9 )]
visible = false

[node name="PickupPoint" type="Spatial" parent="." index="7"]
unique_name_in_owner = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.04279, 0 )

[node name="MultitoolHolder" type="Spatial" parent="." index="8"]

[node name="Multitool" parent="MultitoolHolder" index="0" instance=ExtResource( 11 )]

[node name="PlayerRayCast" parent="MultitoolHolder/Multitool" index="7" instance=ExtResource( 14 )]

[node name="HandToolViewport" parent="MultitoolHolder/Multitool" index="8" instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0915962, 0.100376 )
screen_size = Vector2( 0.4, 0.3 )
viewport_size = Vector2( 1250, 750 )
scene = ExtResource( 7 )
update_mode = 2
collision_layer = 524288

[node name="BadPlanting" type="Area" parent="." index="9"]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="BadPlanting" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.54036, 0 )
shape = SubResource( 1 )

[editable path="LeftHandController/LeftPhysicsHand"]
[editable path="LeftHandController/LeftPhysicsHand/Hand_Nails_L"]
[editable path="RightHandController/RightPhysicsHand"]
[editable path="RightHandController/RightPhysicsHand/Hand_Nails_R"]
